tests/NormalTests/paczka1/small_fuzzy/90035803.err
Error in line 3: hef A144 63,1
Error in line 7: loqLv4lcm S489 193,74
